# googletest-with-mockcpp

./: .gitignore  CMakeLists.txt  build_test.ps1  testgtest.cpp
